openshift-apps/src/main/fabric8/nexus-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations: {}
  labels:
    app: nexus
  name: nexus
spec:
  replicas: 1
  selector:
    app: nexus
  template:
    metadata:
      annotations: {}
      labels:
        app: nexus
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: sonatype/nexus
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /nexus/content/groups/public
            port: 8081
          initialDelaySeconds: 180
          timeoutSeconds: 10
        name: nexus
        ports:
        - containerPort: 8081
          name: http
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /nexus/content/groups/public
            port: 8081
          initialDelaySeconds: 60
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "0"
            memory: "0"
          requests:
            cpu: "0"
            memory: "0"
        volumeMounts:
        - mountPath: /sonatype-work
          name: nexus-pvc
          readOnly: false
      volumes:
      - name: nexus-pvc
        persistentVolumeClaim:
          claimName: nexus-pvc
  triggers:
  - type: ConfigChange
