openshift-apps/src/main/fabric8/nexus-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: nexus
  name: nexus
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
