openshift-apps/src/main/fabric8/nexus-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations: {}
  labels:
    app: nexus
    expose: "true"
  name: nexus
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: nexus
